*** empty log message ***
git-svn-id: https://svn.library.emory.edu/svn/slavevoyages/trunk@95 2440b244-9809-4ec7-bebd-234906d9abf5

--- a/WebContent/common.css
+++ b/WebContent/common.css
@@ -19,3 +19,7 @@ table.grid th {
 table.grid td.new-value {
 	font-style: italic;
 	background-color: #EEEEEE; }
+	
+table.grid tr.head {
+	font-weight: bold;
+	background-color: #EEEEEE; }
