*** empty log message ***
git-svn-id: https://svn.library.emory.edu/svn/slavevoyages/trunk@132 2440b244-9809-4ec7-bebd-234906d9abf5

--- a/WebContent/search-jsp.css
+++ b/WebContent/search-jsp.css
@@ -9,12 +9,17 @@ a {
 
 input, textarea, select {
 	border: 0px;
-	font-family: Verdanda, sans-serif;
+	font-family: Verdana, sans-serif;
 	font-size: 8pt; }
 	
 div.main-title {
+	padding-top: 15px;
+	padding-bottom: 15px;
+	padding-left: 150px;
+	background-image: url(header0.png);
+	background-repeat: no-repeat;
+	background-position: left -50px;		
 	border-bottom: 2px solid #444444;
-	padding: 15px;
 	background-color: #555555;
 	color: White;
 	font-family: Arial;
@@ -55,6 +60,11 @@ div.side-box {
 
 td.query-builder-delete {
 	text-align: right; }
+
+span.query-builder-error {
+	background-color: #CC3300;
+	color: White;
+	font-weight: bold; }
 
 td.side-box-button {
 	cursor: pointer;
