*** empty log message ***
git-svn-id: https://svn.library.emory.edu/svn/slavevoyages/trunk@180 2440b244-9809-4ec7-bebd-234906d9abf5

--- a/WebContent/search-jsf.css
+++ b/WebContent/search-jsf.css
@@ -181,3 +181,18 @@ div.configDiv {
 	margin-right: 2px; 
 	margin-left: 2px;
 }
+
+
+div.advancedStatConfigLeftDiv {
+	background-color: #666666;
+	margin-top: 0px; 
+	margin-right: 2px; 
+	margin-left: 2px;
+}
+
+div.advancedStatConfigRightDiv {
+	background-color: #666666;
+	margin-top: 0px; 
+	margin-right: 2px; 
+	margin-left: 2px;
+}
