--- a/WebContent/schema.css
+++ b/WebContent/schema.css
@@ -18,9 +18,10 @@ input, textarea, select {
 	font-size: 8pt; }
 
 select {
-	width: 300px; }
+	width: 400px; }
 
 div.content {
+	margin-bottom: 10px;
 	margin-left: 10px; 
 	margin-right: 10px; }
 	
@@ -121,3 +122,6 @@ div.select-and-order-add {
 	
 div.select-and-order-remove {
 	text-align: center; }
+
+span.description {
+	color: Gray; }
