*** empty log message ***
git-svn-id: https://svn.library.emory.edu/svn/slavevoyages/trunk@197 2440b244-9809-4ec7-bebd-234906d9abf5

--- a/WebContent/search-jsf.css
+++ b/WebContent/search-jsf.css
@@ -171,8 +171,14 @@ table.grid th {
 	/*border-top: 2px solid #CCCCCC;
 	border-bottom: 2px solid #CCCCCC; */}
 
-table.grid td {
+tr.grid-row-even {
 	border-bottom: 2px solid #EEEEEE; }
+
+tr.grid-row-odd {
+	border-bottom: 2px solid #EEEEEE; }
+
+tr.grid-row-last {
+	border-bottom-style: none; }
 
 table.configTable td {
 	background-color: #666666;
