--- a/WebContent/search-jsf.css
+++ b/WebContent/search-jsf.css
@@ -172,13 +172,25 @@ table.grid th {
 	border-bottom: 2px solid #CCCCCC; */}
 
 tr.grid-row-even {
+	cursor: pointer;
 	border-bottom: 2px solid #EEEEEE; }
 
 tr.grid-row-odd {
+	cursor: pointer;
 	border-bottom: 2px solid #EEEEEE; }
 
 tr.grid-row-last {
+	cursor: pointer;
 	border-bottom-style: none; }
+	
+tr.grid-row-even:hover {
+	background-color: #EEEEEE; }
+
+tr.grid-row-odd:hover {
+	background-color: #EEEEEE; }
+
+tr.grid-row-last:hover {
+	background-color: #EEEEEE; }
 
 table.configTable td {
 	background-color: #666666;
