*** empty log message ***
git-svn-id: https://svn.library.emory.edu/svn/slavevoyages/trunk@218 2440b244-9809-4ec7-bebd-234906d9abf5

--- a/WebContent/search-jsf.css
+++ b/WebContent/search-jsf.css
@@ -172,15 +172,15 @@ table.grid th {
 	border-bottom: 2px solid #CCCCCC; */}
 
 tr.grid-row-even {
-	cursor: pointer;
+	/*cursor: pointer;*/
 	border-bottom: 2px solid #EEEEEE; }
 
 tr.grid-row-odd {
-	cursor: pointer;
+	/*cursor: pointer;*/
 	border-bottom: 2px solid #EEEEEE; }
 
 tr.grid-row-last {
-	cursor: pointer;
+	/*cursor: pointer;*/
 	border-bottom-style: none; }
 	
 tr.grid-row-even:hover {
