*** empty log message ***
git-svn-id: https://svn.library.emory.edu/svn/slavevoyages/trunk@219 2440b244-9809-4ec7-bebd-234906d9abf5

--- a/WebContent/search-jsf.css
+++ b/WebContent/search-jsf.css
@@ -222,3 +222,20 @@ div.advancedStatConfigRightDiv {
 	margin-right: 2px; 
 	margin-left: 2px;
 }
+
+div.tableDataTooltip 
+{
+    visibility: hidden; 
+    position: absolute; 
+    top: 0;  
+    left: 0; 
+
+    z-index: 1; 
+    overflow:auto;
+    float: left;
+    width: 240px;
+    background: white;
+    font: normal 8pt sans-serif; 
+    padding: 3px; 
+    border: solid 1px;
+}
