*** empty log message ***
git-svn-id: https://svn.library.emory.edu/svn/slavevoyages/trunk@225 2440b244-9809-4ec7-bebd-234906d9abf5

--- a/WebContent/search-jsf.css
+++ b/WebContent/search-jsf.css
@@ -162,10 +162,8 @@ table.grid {
 	width: 100%;
 	border-collapse: collapse; } 
 
-table.grid td, table.grid th {
-	padding: 5px; }
-
 table.grid th {
+	padding: 5px;
 	background-color: #DDDDDD;
 	text-align: left; }
 
@@ -177,6 +175,9 @@ tr.grid-row-odd {
 	cursor: pointer;
 	border-bottom: 2px solid #EEEEEE; }
 
+tr.grid-row-odd td, tr.grid-row-even td { 
+	padding: 5px; }
+		
 tr.grid-row-last {
 	cursor: pointer;
 	border-bottom-style: none; }
