--- a/WebContent/schema.css
+++ b/WebContent/schema.css
@@ -101,16 +101,17 @@ table.grid {
 	border-collapse: collapse; } 
 
 table.grid td, table.grid th {
+	border: 1px solid #CCCCCC;
 	padding: 5px; }
 
 table.grid th {
-	background-color: #DDDDDD;
-	text-align: left;
-	/*border-top: 2px solid #CCCCCC;
-	border-bottom: 2px solid #CCCCCC; */}
+	vertical-align: top;
+	background-color: #EEEEEE;
+	text-align: left; }
 
 table.grid td {
-	border-bottom: 2px solid #EEEEEE; }
+	vertical-align: top;
+	/* border-bottom: 2px solid #EEEEEE; */ }
 	
 td.select-and-order-add-remove {
 	padding-left: 5px;
