--- a/WebContent/search-jsf.css
+++ b/WebContent/search-jsf.css
@@ -316,3 +316,18 @@ th.cellHeader {
 
 td.cellLeft {
 	font-weight: normal; }
+
+div.message-bar-container {
+	margin-top: 10px;
+	margin-left: 10px;
+	margin-right: 10px; }
+		
+div.message-bar {
+	padding-top: 5px;
+	padding-bottom: 5px;
+	padding-left: 5px;
+	padding-right: 5px;
+	background-color: #DDDDDD; }
+	
+td.message-bar-button {
+	padding-left: 10px; }
