--- a/WebContent/search-jsf.css
+++ b/WebContent/search-jsf.css
@@ -273,17 +273,18 @@ div.advancedStatConfigRightDiv {
 div.tableDataTooltip {
     visibility: hidden; 
     position: absolute; 
+    /*
     top: 0;  
     left: 0; 
-
+    */
     z-index: 1; 
-    overflow:auto;
-    float: left;
+/*    overflow:auto;*/
+/*    float: left; */
     width: 240px;
-    background: white;
-    font: normal 8pt sans-serif; 
-    padding: 3px; 
-    border: solid 1px;
+    background: White;
+/*    font: normal 8pt sans-serif; */
+    padding: 5px; 
+    border: solid 1px #CCCCCC;
 }
 
 
