*** empty log message ***
git-svn-id: https://svn.library.emory.edu/svn/slavevoyages/trunk@260 2440b244-9809-4ec7-bebd-234906d9abf5

--- a/WebContent/import.css
+++ b/WebContent/import.css
@@ -34,8 +34,12 @@ h2 {
 	background-color: #DDDDDD;
 	font-weight: bold; }
 	
-th {
+th, td {
+	padding: 3px;
 	text-align: left; }
 
 div.main-container {
-	margin: 5px; }
+	margin: 10px; }
+	
+tr.log-item-new-stage td  {
+	border-bottom: 1px solid #CCCCCC; }
