*** empty log message ***
git-svn-id: https://svn.library.emory.edu/svn/slavevoyages/trunk@263 2440b244-9809-4ec7-bebd-234906d9abf5

--- a/WebContent/schema.css
+++ b/WebContent/schema.css
@@ -43,7 +43,8 @@ div.tabs-container {
 	padding: 5px;
 	color: White;
 	font-weight: bold;
-	background-color: #CC3300; }
+	-background-color: #CC3300;
+	background-color: #4F2683; }
 
 h1 {
 	margin: 10px 0px 10px 0px;
