*** empty log message ***
git-svn-id: https://svn.library.emory.edu/svn/slavevoyages/trunk@267 2440b244-9809-4ec7-bebd-234906d9abf5

--- a/WebContent/schema.css
+++ b/WebContent/schema.css
@@ -113,6 +113,9 @@ table.grid {
 	-width: 100%;
 	border-collapse: collapse; } 
 
+td.grid-col-center, th.grid-col-center {
+	text-align: center; }
+
 table.grid td, table.grid th {
 	border: 1px solid #CCCCCC;
 	border: 1px solid #C7CAE6;
