--- a/WebContent/search.css
+++ b/WebContent/search.css
@@ -70,6 +70,24 @@ td.message-bar-button {
 	padding-left: 10px; }
 
 
+/* detail */
+
+table.detail {
+	border-collapse: collapse; }
+	
+table.detail td, table.detail th {
+	text-align: left;
+	padding-left: 10px;
+	padding-right: 5px;
+	padding-top: 5px;
+	padding-bottom: 5px;
+	border-bottom: 2px solid #F1E7C8;
+	border-right: 2px solid #F1E7C8; }
+	
+td.detail-label {
+	font-weight: bold; }
+
+
 /*
 
 div.main-title {
