*** empty log message ***
git-svn-id: https://svn.library.emory.edu/svn/slavevoyages/trunk@320 2440b244-9809-4ec7-bebd-234906d9abf5

--- a/WebContent/menu.css
+++ b/WebContent/menu.css
@@ -17,6 +17,7 @@ div.menu-popup-item-main:hover {
 	-color: White; }
 
 div.menu-popup-submenu-frame {
+	z-index: 1;	
 	top: -7px;
 	-left: 200px;
 	left: 290px;
