--- a/WebContent/search.css
+++ b/WebContent/search.css
@@ -88,345 +88,10 @@ td.detail-label {
 	font-weight: bold; }
 
 
+/* map */
 /*
-
-div.main-title {
-	padding-top: 15px;
-	padding-bottom: 15px;
-	padding-left: 150px;
-	padding-left: 10px;
-	-background-image: url(header0.png);
-	-background-repeat: no-repeat;
-	-background-position: left -50px;		
-	border-bottom: 2px solid #571C1F;
-	background-color: #571C1F;
-	color: White;
-	font-family: Arial;
-	font-size: 16pt; }
-
-td.side-panel {
-	width: 300px;
-	vertical-align: top;
-	background-color: #F1E7C8; }
-	
-div.side-panel-section {
-	margin-top: 00px;
-	cursor: pointer;
-	padding: 5px 10px 5px 10px; 
-	color: black;
-	font-weight: bold;
-	background-color: #E2873B; }
-	
-div.side-panel-section:hover {
-	background-color: #CA4223; }
-
-div.side-panel-section table {
-	width: 100%; }
-
-td.side-panel-section-symbol {
-	text-align: right; }
-
-td.main-panel {
-	vertical-align: top; 
-	border-left: 4px solid #F1E7C8;
-}
-
-div.side-box {
-	color: black;
-	margin-top: 0px;
-	margin-left: 5px;
-	margin-right: 5px;
-	margin-bottom: 0px;
-	padding-top: 5px;
-	padding-bottom: 10px;
-	padding-left: 5px;
-	padding-right: 5px;
-	border-bottom: 2px solid #D6A51A;
-	background-color: #F1E7C8; }
-
-td.query-builder-delete {
-	text-align: right; }
-
-span.query-builder-error {
-	background-color: #CC3300;
-	color: black;
-	font-weight: bold; }
-
-td.side-box-button {
-	cursor: pointer;
-	padding: 1px 5px 1px 5px;
-	text-align:center; 
-	border:thin solid; 
-	border-color: grey;
-	border-width: 0px 1px 1px 0px;
-	background-color: white; }
-
-td.side-box-button:hover {
-	background-color: #F3F3F3; }
-
-td.side-box-button-space {
-	width: 5px; }	
-
-table.query-builder-remove {
-	margin-right: 0px;
-	margin-left: auto; }
-
-table.query-builder-label {
-	margin-bottom: 5px;
-	width: 280px; }
-
-input.query-builder-text {
-	border: 0px;
-	padding: 2px;
-	width: 276px; }
-
-td.query-builder-range-type {
-	width: 115px; }
-
-td.query-builder-range-type select {
-	border: 0px;
-	padding: 1px;
-	width: 103px; }
-
-td.query-builder-range-dash {
-	text-align: center;
-	width: 15px; }
-
-td.query-builder-range-value {
-	width: 75px; }
-
-td.query-builder-range-value input {
-	border: 0px;
-	padding: 2px;
-	width: 71px; }
-	
-td.query-builder-range-month {
-	width: 25px; }
-
-td.query-builder-range-month input {
-	border: 0px;
-	padding: 2px;
-	width: 21px; }
-
-td.query-builder-range-slash {
-	overflow: hidden;
-	text-align: center;
-	width: 10px; }
-
-td.query-builder-range-year {
-	width: 40px; }
-
-td.query-builder-range-year input {
-	border: 0px;
-	padding: 2px;
-	width: 36px; }
-
-table.query-builder-range-months {
-	margin-top: 5px;
-	width: 280px; }
-	
-td.query-builder-range-month-delected {
-	padding-top: 2px;
-	padding-bottom: 2px;
-	cursor: pointer;
-	text-align: center; }
-
-td.query-builder-range-month-selected {
-	background-color: #555555;
-	padding-top: 2px;
-	padding-bottom: 2px;
-	cursor: pointer;
-	text-align: center; }
-	
-td.query-builder-list {
-	width: 220px; }
-
-td.query-builder-list input {
-	border: 0px;
-	padding: 2px;
-	width: 206px; }
-
-td.query-builder-list-select {
-	width: 60px; }
-
-td.query-builder-list-select input {
-	width: 60px; }
-	
-table.history-item-buttons {
-	margin-top: 5px; }
-
-div.tab-bar-container {
-	margin-top: 0px; 
-	margin-right: 0px; 
-	margin-left: 0px; 
-	border-left: 4px solid #E2873B;
-	border-bottom: 4px solid #CA4223;
-}
-
-div.tab-bar {
-	font-weight: bold;
-	color: black;
-	padding: 0px;
-	background-color: #E2873B; } 
-	
-td.tab {
-	cursor: pointer;
-	padding-left: 5px;
-	padding-right: 5px;
-	padding-top: 5px;
-	padding-bottom: 5px; }
-
-td.tab:hover {
-	background-color: #F1E7C8; }
-
-td.tab-selected {
-	padding-left: 5px;
-	padding-right: 5px;
-	padding-top: 5px;
-	padding-bottom: 5px;
-	background-color: #CA4223; }
-	
-div.data-container {
-	border-style: solid;
-	border-color: #CA4223; 
-	border-width: 0px 0px 0px 0px;
-	margin-top: 0px; 
-	margin-bottom: 0px; 
-	margin-right: 0px; 
-	margin-left: 0px; 
-	padding-bottom: 0px;
-	border-left: 4px solid #CA4223;
-}
-	
-table.grid {
-	width: 100%;
-	background: white;
-	border-collapse: collapse; } 
-
-table.grid th {
-	padding: 5px;
-	background-color: #F1E7C8;
-	text-align: left; }
-
-tr.grid-row-even {
-	cursor: pointer;
-	border-bottom: 2px solid #F5F0D3; }
-
-tr.grid-row-odd {
-	cursor: pointer;
-	border-bottom: 2px solid #F5F0D3; }
-
-tr.grid-row-odd td, tr.grid-row-even td { 
-	padding: 5px; }
-		
-tr.grid-row-last {
-	cursor: pointer;
-	border-bottom-style: none; }
-	
-tr.grid-row-even:hover {
-	background-color: #F5F0D3; }
-
-tr.grid-row-odd:hover {
-	background-color: #F5F0D3; }
-
-tr.grid-row-last:hover {
-	background-color: #F5F0D3; }
-	
-td.grid-header-text {
-	padding: 0px; }
-
-td.grid-header-icon {
-	padding-left: 5px;
-	padding-top: 0px;
-	padding-bottom: 0px;
-	padding-right: 0px; }
-
-table.configTable td {
-	background-color: #666666;
-	border: 1;
-	border-color: #666666;
-	margin-top: 40px; 
-	margin-right: 40px; 
-	margin-left: 40px;
-}
-
-div.configDiv {
-	background-color: #666666;
-	margin-top: 0px; 
-	margin-right: 2px; 
-	margin-left: 2px;
-}
-
-div.tableDataTooltip {
-    visibility: hidden; 
-    position: absolute; 
-    z-index: 1; 
-    width: 240px;
-    background: White;
-    padding: 5px; 
-    border: solid 1px #CCCCCC;
-}
-
-
-table.detail {
-	border-collapse: collapse;
-	background-color: white; 
-	width: 100%;
-}
-
-table.detail td {
-	border-bottom: 2px solid #F5F0D3;
-	text-align: left;
-	padding: 5px; }
-	
-table.detail th {
-	text-align: left;
-	padding: 5px; 
-	border-bottom: 2px solid #F5F0D3;
-	background-color: #F1E7C8;
-}
-
-td.cellPlain {
-	border-left: 2px solid #F5F0D3;
-	background-color: White; }
-
-td.cellChanged {
-	background-color: #CC3300; 
-	border-bottom: 2px solid #F5F0D3;
-}
-
-th.cellUpperLeft {
-	background-color: #DDDDDD; 
-	border-bottom: 2px solid #F5F0D3;
-}
-
-th.cellHeader {
-	background-color: #DDDDDD;
-	font-weight: bold; 
-	border-bottom: 2px solid #F5F0D3;
-}
-
-td.cellLeft {
-	font-weight: normal; 
-	border-bottom: 2px solid #F5F0D3;
-}
-
-div.message-bar-container {
-	margin-top: 0px;
-	margin-left: 0px;
-	margin-right: 0px; }
-		
-div.message-bar {
-	padding-top: 5px;
-	padding-bottom: 5px;
-	padding-left: 5px;
-	padding-right: 5px;
-	background-color: #F1E7C8; 
-	border-left: 4px solid #CA4223;
-	border-bottom: 2px solid #F5F0D3;
-}
-	
-td.message-bar-button {
-	padding-left: 10px; }
-	
+div.map-tools-top {
+	z-index: -1;
+	background-color: Red;
+	border-bottom: 2px solid #F1E7C8; }
 */
